<resources>
    <string name="app_name">Email</string>

    <string name="switch_accounts">Switch Account</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>

    <string name="all_labels">All labels</string>
    <string name="starred">Starred</string>
    <string name="drafts">Drafts</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>

    <string name="accounts_and_settings">Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="settings">Settings</string>

    <string name="extras">Extras</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>

    <string name="holder_name">First Lastname</string>
    <string name="holder_email">first.lastname@gmail.com</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
</resources>